--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.10"
 django = "^4.1.5"
 django-mptt = "^0.14.0"
+djangorestframework = "^3.14.0"
+drf-yasg = "^1.21.4"
+django-filter = "^22.1"
 
 
 [build-system]
