--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ django-filter = "^22.1"
 djangorestframework-simplejwt = "^5.2.2"
 pytest-django = "^4.5.2"
 django-jazzmin = "^2.6.0"
+python-dotenv = "^0.21.1"
+psycopg2-binary = "^2.9.5"
 
 
 [build-system]
