--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ psycopg2-binary = "^2.9.5"
 pillow = "^9.4.0"
 django-parler = "^2.3"
 sentry-sdk = "^1.14.0"
+django-multiselectfield = "^0.1.12"
 
 
 [build-system]
