--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pillow = "^9.4.0"
 django-parler = "^2.3"
 sentry-sdk = "^1.14.0"
 django-multiselectfield = "^0.1.12"
+pyyaml = "^6.0"
 
 
 [build-system]
