--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ django-parler = "^2.3"
 sentry-sdk = "^1.14.0"
 django-multiselectfield = "^0.1.12"
 pyyaml = "^6.0"
+faker = "^16.6.1"
 
 
 [build-system]
