--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
+# -- FILE: pytest.ini (or tox.ini)
 [pytest]
+django_debug_mode = true
 DJANGO_SETTINGS_MODULE = root.settings
-
-python_files = tests/test_*.py
+# -- recommended but optional:
+python_files = tests.py test_*.py *_tests.py
