--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ sentry-sdk = "^1.14.0"
 django-multiselectfield = "^0.1.12"
 pyyaml = "^6.0"
 faker = "^16.6.1"
+pytest = "^7.2.1"
+coverage = "^7.1.0"
 
 
 [build-system]
