--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-django = "^4.1.5"
+django = "^4.1.6"
 django-mptt = "^0.14.0"
 djangorestframework = "^3.14.0"
 drf-yasg = "^1.21.4"
@@ -26,6 +26,8 @@ faker = "^16.6.1"
 pytest = "^7.2.1"
 coverage = "^7.1.0"
 model-bakery = "^1.10.1"
+pytest-cov = "^4.0.0"
+django-parler-rest = "^2.2"
 
 
 [build-system]
