--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ coverage = "^7.1.0"
 model-bakery = "^1.10.1"
 pytest-cov = "^4.0.0"
 django-parler-rest = "^2.2"
+celery = "^5.2.7"
 
 
 [build-system]
