docker nginx settings

--- a/apps/nginx/nginx.conf
+++ b/apps/nginx/nginx.conf
@@ -14,11 +14,11 @@ server {
     }
 
     location /static/ {
-        alias /home/app/web/staticfiles/;
+        alias /home/project/static/;
     }
 
     location /media/ {
-        alias /home/app/web/mediafiles/;
+        alias /home/project/media/;
     }
 
 }
