--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     command: gunicorn root.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/project
-      - static_volume:project/static
-      - media_volume:project/media
+      - static_volume:/home/project/static/
+      - media_volume:/home/project/media/
     expose:
       - 8000
     env_file:
@@ -30,8 +30,8 @@ services:
   nginx:
     build: ./apps/nginx
     volumes:
-      - static_volume:project/static
-      - media_volume:project/media
+      - static_volume:/home/project/static/
+      - media_volume:/home/project/media/
     ports:
       - 80:80
     depends_on:
