--- a/apps/nginx/nginx.conf
+++ b/apps/nginx/nginx.conf
@@ -7,7 +7,7 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://api.fastcommerce.online api.fastcommerce.online;
+        proxy_pass http://api.fastcommerce.online;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
