--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ model-bakery = "^1.10.1"
 pytest-cov = "^4.0.0"
 django-parler-rest = "^2.2"
 celery = "^5.2.7"
+django-debug-toolbar = "^3.8.1"
 
 
 [build-system]
