--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pytest-cov = "^4.0.0"
 django-parler-rest = "^2.2"
 celery = "^5.2.7"
 django-debug-toolbar = "^3.8.1"
+flake8 = "^6.0.0"
 
 
 [build-system]
