pytest coverage settings

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 # -- FILE: pytest.ini (or tox.ini)
 [pytest]
+addopts = --cov-report html:coverage --cov
 django_debug_mode = true
 DJANGO_SETTINGS_MODULE = root.settings
 # -- recommended but optional:
