--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 # -- FILE: pytest.ini (or tox.ini)
 [pytest]
-addopts = --cov-report html:coverage --cov
+addopts = --cov --cov-report html:coverage
 django_debug_mode = true
 DJANGO_SETTINGS_MODULE = root.settings
 # -- recommended but optional:
