optimize user tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,4 +4,4 @@ django_debug_mode = true
 DJANGO_SETTINGS_MODULE = root.settings
 # -- recommended but optional:
 python_files = tests.py test_*.py *_tests.py
-addopts = -v --cov-config=.coveragerc --cov --cov-report html:coverage
+;addopts = -v --cov-config=.coveragerc --cov --cov-report html:coverage
