--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ django-debug-toolbar = "^3.8.1"
 flake8 = "^6.0.0"
 mypy = "^1.0.0"
 pytest-django = "^4.5.2"
+django-hosts = "^5.2"
 
 
 [build-system]
