--- a/.env.copy
+++ b/.env.copy
@@ -1,4 +1,4 @@
-SECRET_KEY=django-insecure-xxxxxxxx
+SECRET_KEY=django-insecure-&*6a+f=3dy(5ea(w-v)ao$h0mcpopj^--o6vdo3s_q^7tc97k#
 DB_NAME=db_name
 DB_USER=db_user
 DB_PASSWORD=password
