--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ pytest-django = "^4.5.2"
 django-hosts = "^5.2"
 httpx = "^0.23.3"
 aiohttp = "^3.8.4"
+pandas = "^1.5.3"
+openpyxl = "^3.1.1"
 
 
 [build-system]
